# redys

./: README.md  SciTE.properties  aeff.py  atests.py  pyproject.toml  redys.py  redys_old.py  setup.py  test_async.py  test_compat_v1_v2.py  test_redys2.py  test_sync.py  test_test.py  tests.py  testv2.py
.github/workflows/: on_commit_do_all_unittests.yml  on_tag_do_release_and_deploy_pypi.yml  test_platforms.yml  update_version.py
redys/: __init__.py  redys.py  redys2.py  servone.py  usot.py  v2.py
